--- a/openassessment/xblock/static/sass/oa/views/_oa-base.scss
+++ b/openassessment/xblock/static/sass/oa/views/_oa-base.scss
@@ -547,6 +547,8 @@
 
   .submission__answer__part__text__value {
     margin: ($baseline-v/2) 0;
+    border-color: #7C8F9C;
+
 
     &:not(textarea) {
       border: 1px solid $color-decorative-secondary;
